fix: remove color transition to avoid flickering when hovering email

--- a/src/app/features/general/components/email/email.component.scss
+++ b/src/app/features/general/components/email/email.component.scss
@@ -9,7 +9,6 @@
     position: relative;
     overflow: hidden;
     transition:
-      color var(--params),
       background-color var(--params);
     z-index: 0;
     border-radius: 16px;
